--- a/src/components/Cards/css/styles.scss
+++ b/src/components/Cards/css/styles.scss
@@ -90,6 +90,11 @@ input{
         flex: 1;
         display: flex;
         flex-direction: column;
+        h5{
+            color: #009443 !important;
+            font-size: 17px;
+            font-weight: 700;
+        }
     }
 
     .info {
